completed implementations for booking and customer